objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>Partner_Affiliate_Name__c</fullName>
        <label>Partner Affiliate Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Affiliate_Phone__c</fullName>
        <label>Partner Affiliate Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Post_Event_Workflow__c</fullName>
        <label>Post-Event Workflow</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Attended__c</fullName>
        <description>Primary only with Status Attended</description>
        <inlineHelpText>Primary only with Status Attended</inlineHelpText>
        <label>Primary Attended</label>
        <summaryFilterItems>
            <field>CampaignMember.Primary__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>CampaignMember.Status</field>
            <operation>equals</operation>
            <value>Attended</value>
        </summaryFilterItems>
        <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Primary_Canceled__c</fullName>
        <description>Primary only and Status Canceled</description>
        <inlineHelpText>Primary only and Status Canceled</inlineHelpText>
        <label>Primary Canceled</label>
        <summaryFilterItems>
            <field>CampaignMember.Primary__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>CampaignMember.Status</field>
            <operation>equals</operation>
            <value>Canceled</value>
        </summaryFilterItems>
        <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Primary_Confirmed__c</fullName>
        <description>Primary Only with Confirmed Status</description>
        <inlineHelpText>Primary Only with Confirmed Status</inlineHelpText>
        <label>Primary Confirmed</label>
        <summaryFilterItems>
            <field>CampaignMember.Primary__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>CampaignMember.Status</field>
            <operation>equals</operation>
            <value>Confirmed, Hard Confirm, Hard Confirmation</value>
        </summaryFilterItems>
        <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Promo_Codes__c</fullName>
        <description>Promo codes and discount used</description>
        <inlineHelpText>Promo codes and discount used for each - &quot;CODE&quot; - $100 Off / &quot;CODE2&quot; - $200 Off</inlineHelpText>
        <label>Promo Codes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Promotion_Info__c</fullName>
        <description>Information on the Campaign the Client came in on.</description>
        <label>Promotion Info</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Recipient_Lists__c</fullName>
        <label>Recipient List(s)</label>
        <length>40000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Registered__c</fullName>
        <label>Registered</label>
        <summaryFilterItems>
            <field>CampaignMember.IsPrimary</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Reminder_Workflow__c</fullName>
        <label>Reminder Workflow</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Replay_Link__c</fullName>
        <label>Replay Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Scheduled_Attendance__c</fullName>
        <formula>Hard_Confirmed_Buying_Units__c +  Hard_Confirmed_Guests__c +  Total_Confirmed__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Scheduled Attendance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Shipping__c</fullName>
        <label>Shipping</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Slide_Presentation__c</fullName>
        <description>Slides from the presentation</description>
        <inlineHelpText>Slides from the presentation</inlineHelpText>
        <label>Slide Presentation</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Speakers2__c</fullName>
        <description>Text field instead of multi-picklist</description>
        <label>Speakers</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Speakers__c</fullName>
        <description>Names of the presenters at the event.</description>
        <inlineHelpText>Names of the presenters at the event.</inlineHelpText>
        <label>Speakers (Old)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Speakers</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Special_Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Special Event</label>
        <referenceTo>evt__Special_Event__c</referenceTo>
        <relationshipLabel>Campaigns</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Staff_Staying_Onsite__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Staff Staying Onsite</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Suppression_Lists__c</fullName>
        <inlineHelpText>Emails sent after the event registration or offer was bought.</inlineHelpText>
        <label>Suppression List(s)</label>
        <length>40000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Survey_Link__c</fullName>
        <label>Survey Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Terms__c</fullName>
        <description>Terms of agreement</description>
        <inlineHelpText>This is the contract terms with this company</inlineHelpText>
        <label>Terms</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Top_Parent_Campaign_Id__c</fullName>
        <formula>IF( NOT(ISBLANK( Parent.Parent.Parent.Parent.Id ) ), Parent.Parent.Parent.Parent.Id,
IF( NOT(ISBLANK( Parent.Parent.Parent.Id ) ), Parent.Parent.Parent.Id,
IF( NOT(ISBLANK( Parent.Parent.Id ) ), Parent.Parent.Id,
IF( NOT(ISBLANK( Parent.Id ) ), Parent.Id,  Id ))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Top Parent Campaign Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Airline__c</fullName>
        <label>Total Airline</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Attended__c</fullName>
        <formula>Special_Event__r.evt_Attended__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Attended</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Both_Registered__c</fullName>
        <description>Total Primary &amp; Guests with Status Registered</description>
        <inlineHelpText>Total Primary &amp; Guests with Status Registered</inlineHelpText>
        <label>Total Primary &amp; Guests Registered</label>
        <summaryFilterItems>
            <field>CampaignMember.Status</field>
            <operation>equals</operation>
            <value>Registered, Registered Them</value>
        </summaryFilterItems>
        <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Campaign_Members__c</fullName>
        <formula>NumberOfContacts +  NumberOfLeads</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Campaign Members</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Canceled__c</fullName>
        <formula>Special_Event__r.evt_Cancaled_Roll__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Canceled</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Collected__c</fullName>
        <inlineHelpText>Net transactions, net of fees, for this child campaign.</inlineHelpText>
        <label>Total Collected</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Collected_for_Hierarchy__c</fullName>
        <inlineHelpText>Net transactions, net of fees, for all campaigns in the hierarchy.</inlineHelpText>
        <label>Total Collected for Hierarchy</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Confirmed__c</fullName>
        <formula>Special_Event__r.Total_Registered_Attended__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Confirmed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Food_Transport__c</fullName>
        <label>Total Food &amp; Transport</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Guests__c</fullName>
        <description>The total guests coming not including canceled</description>
        <label>Total Guests</label>
        <summaryFilterItems>
            <field>CampaignMember.Primary__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Hotel__c</fullName>
        <label>Total Hotel</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Prim_Guest_Confirmed__c</fullName>
        <description>Total Primary and Guests Confirmed</description>
        <inlineHelpText>Total Primary and Guests Confirmed</inlineHelpText>
        <label>Total Confirmed</label>
        <summaryFilterItems>
            <field>CampaignMember.Status</field>
            <operation>equals</operation>
            <value>Confirmed</value>
        </summaryFilterItems>
        <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Registered__c</fullName>
        <formula>Special_Event__r.evt__Attendees_Registered__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Registered</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Venue__c</fullName>
        <label>Total Venue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Travel_Departure_Date__c</fullName>
        <label>Travel Departure Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Travel_Return_Date__c</fullName>
        <label>Travel Return Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>W9_Received__c</fullName>
        <inlineHelpText>Date the W9 was received and on file.</inlineHelpText>
        <label>W9 Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <label>Zip Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zoom_Webinar_ID__c</fullName>
        <label>Zoom Webinar ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__Pardot_Campaign_Id__c</fullName>
        <description>The Pardot identifier for the connected campaign record</description>
        <externalId>true</externalId>
        <label>Pardot Campaign Id</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>pi__Pardot_Has_Dependencies__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines if Pardot has marketing assets using this campaign</description>
        <label>Pardot Has Dependencies</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllActiveCampaigns</fullName>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.NAME</columns>
        <columns>Event_Location__c</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>Event_Date__c</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.LAST_UPDATE</columns>
        <columns>CAMPAIGN.CREATED_DATE</columns>
        <columns>CAMPAIGN.NUM_WON_OPPORTUNITIES</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active Campaigns</label>
    </listViews>
    <listViews>
        <fullName>All_Campaigns_Ever</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <label>All Campaigns</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Bulletproof</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>Total_Collected__c</columns>
        <columns>CAMPAIGN.NUM_OPPORTUNITIES</columns>
        <columns>CAMPAIGN.NUM_LEADS</columns>
        <columns>CAMPAIGN.NUM_CONTACTS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.NAME</field>
            <operation>contains</operation>
            <value>- BP,Bullet</value>
        </filters>
        <label>Bulletproof</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Client_Referral_Program</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>Affiliate_Percentage__c</columns>
        <columns>PARENT_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CAMPAIGN.CAMPAIGN_TYPE</field>
            <operation>equals</operation>
            <value>Client Referral Program</value>
        </filters>
        <label>Client Referral Program</label>
    </listViews>
    <listViews>
        <fullName>Client_Segmentation</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.CAMPAIGN_TYPE</field>
            <operation>equals</operation>
            <value>Client Segmentation</value>
        </filters>
        <label>Client Segmentation</label>
    </listViews>
    <listViews>
        <fullName>Erica_s_Audit</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>Event_Location__c</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.START_DATE</field>
            <operation>greaterThan</operation>
            <value>1/1/2014</value>
        </filters>
        <label>Erica&apos;s Audit</label>
    </listViews>
    <listViews>
        <fullName>Events1</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>AMOUNT_WON</columns>
        <columns>CAMPAIGN.NUM_CONTACTS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.NAME</field>
            <operation>contains</operation>
            <value>SIW,MTS,Retreat</value>
        </filters>
        <label>Events</label>
    </listViews>
    <listViews>
        <fullName>Events_David_do_not_touch</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>Event_Location__c</columns>
        <columns>Event_Date__c</columns>
        <columns>CAMPAIGN.NUM_CONTACTS</columns>
        <columns>CAMPAIGN.NUM_LEADS</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.NAME</field>
            <operation>contains</operation>
            <value>2018,18,2019</value>
        </filters>
        <filters>
            <field>CAMPAIGN.STATUS</field>
            <operation>equals</operation>
            <value>In Progress,Planned</value>
        </filters>
        <label>Events -David do not touch :) I touched</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Parent_Campaigns2</fullName>
        <booleanFilter>2 and (1 OR 3) AND 4</booleanFilter>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.ACTIVE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>TOT_AMOUNT_WON</columns>
        <columns>CAMPAIGN.TOT_WON_OPPORTUNITIES</columns>
        <columns>CAMPAIGN.NUM_LEADS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PARENT_NAME</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>PARENT_NAME</field>
            <operation>equals</operation>
            <value>Affiliate</value>
        </filters>
        <filters>
            <field>CAMPAIGN.CAMPAIGN_TYPE</field>
            <operation>notEqual</operation>
            <value>Client Segmentation,Email</value>
        </filters>
        <label>Parent Campaigns2</label>
        <language>en_US</language>
        <sharedTo>
            <group>Marketing_Leads</group>
            <group>Marketing_Team</group>
            <group>Partners</group>
        </sharedTo>
    </listViews>
    <sharingModel>FullAccess</sharingModel>
</CustomObject>